--- a/src/app/homepage/todo-item/todo-item.component.html
+++ b/src/app/homepage/todo-item/todo-item.component.html
@@ -1,1 +1,46 @@
-<p>todo-item works!</p>
+<div class="container-fluid">
+  <div class="d-flex align-items-center justify-content-between">
+    <!-- <div>
+            <mat-icon
+            *ngFor="let u of [].constructor(item.urgency)"
+            aria-hidden="false"
+            aria-label="Example home icon"
+      fontIcon="priority_high"
+      ></mat-icon>
+    </div> -->
+    <div class="d-flex gap-1">
+      <!-- <button type="button" class="btn btn-danger btn-sm">
+        <mat-icon>delete_outline</mat-icon>
+      </button> -->
+      <button type="button" class="btn btn-primary btn-sm">
+        <mat-icon>edit</mat-icon>
+      </button>
+    </div>
+    <div
+      *ngIf="item.deadline"
+      class="d-flex justify-content-center flex-column align-items-center"
+    >
+      <mat-icon>watch_later</mat-icon>
+      <h3 class="text-center">
+        {{ item.deadline.toDateString() }}
+      </h3>
+    </div>
+    <div class="form-check">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        id="flexSwitchCheckDefault"
+        style="width: 50px; height: 50px"
+      />
+    </div>
+  </div>
+
+  <div class="d-flex flex-column">
+    <mat-slider step="5" min="0" max="100" discrete>
+      <input matSliderThumb [(ngModel)]="item.progress" />
+    </mat-slider>
+  </div>
+  <p class="text-center fs-4">
+    {{ item.title }}
+  </p>
+</div>
