--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,50 @@
-<p>nav-bar works!</p>
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+  <div class="container-fluid">
+    <span class="navbar-brand">Dropdowns in navbar</span>
+    <button
+      class="navbar-toggler"
+      type="button"
+      aria-controls="navbarContent"
+      [attr.aria-expanded]="!collapsed"
+      aria-label="Toggle navigation"
+      (click)="collapsed = !collapsed"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div
+      class="navbar-collapse"
+      [class.collapse]="collapsed"
+      id="navbarContent"
+    >
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item" ngbDropdown>
+          <a
+            class="nav-link"
+            tabindex="0"
+            ngbDropdownToggle
+            id="navbarDropdown1"
+            role="button"
+          >
+            Static
+          </a>
+          <div
+            ngbDropdownMenu
+            aria-labelledby="navbarDropdown1"
+            class="dropdown-menu"
+          >
+            <a ngbDropdownItem href="#" (click)="$event.preventDefault()"
+              >Action</a
+            >
+            <a ngbDropdownItem href="#" (click)="$event.preventDefault()"
+              >Another action</a
+            >
+            <a ngbDropdownItem href="#" (click)="$event.preventDefault()"
+              >Something else here</a
+            >
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
