--- a/src/app/homepage/links-list/links-list.component.html
+++ b/src/app/homepage/links-list/links-list.component.html
@@ -1,20 +1,14 @@
 <div class="list-group">
-  <li href="#" class="list-group-item flex-column align-items-start">
+  <li
+    *ngFor="let link of currentProject?.links"
+    href="#"
+    class="list-group-item flex-column align-items-start"
+  >
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
+      <h5 class="mb-1">{{ link.title }}</h5>
     </div>
-    <p class="mb-1">
-      Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
-      risus varius blandit.
-    </p>
-  </li>
-  <li href="#" class="list-group-item flex-column align-items-start">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-    </div>
-    <p class="mb-1">
-      Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
-      risus varius blandit.
-    </p>
+    <a class="mb-1">
+      {{ link.url }}
+    </a>
   </li>
 </div>
