--- a/src/app/homepage/projet-list/projet-list.component.html
+++ b/src/app/homepage/projet-list/projet-list.component.html
@@ -1,11 +1,10 @@
 <ul class="list-group">
-  <a href="#" class="list-group-item list-group-item-action"
-    >Dapibus ac facilisis in</a
-  >
-  <a href="#" class="list-group-item list-group-item-action active"
-    >Dapibus ac facilisis in</a
-  >
-  <a href="#" class="list-group-item list-group-item-action"
-    >Dapibus ac facilisis in</a
+  <a
+    *ngFor="let project of projects$ | async"
+    href="#"
+    class="list-group-item list-group-item-action"
+    [class.active]="isActive(project.id)"
+    (click)="changeProject(project.id)"
+    >{{ project.title }}</a
   >
 </ul>
