--- a/src/app/homepage/todo-item/todo-item.component.html
+++ b/src/app/homepage/todo-item/todo-item.component.html
@@ -22,7 +22,7 @@
     >
       <mat-icon>watch_later</mat-icon>
       <h3 class="text-center">
-        {{ item.deadline.toDateString() }}
+        {{ item.deadline }}
       </h3>
     </div>
     <div class="form-check">
@@ -31,16 +31,22 @@
         type="checkbox"
         id="flexSwitchCheckDefault"
         style="width: 50px; height: 50px"
+        (click)="toggleCheckBox()"
+        [ngModel]="item.done"
       />
     </div>
   </div>
 
   <div class="d-flex flex-column">
     <mat-slider step="5" min="0" max="100" discrete>
-      <input matSliderThumb [(ngModel)]="item.progress" />
+      <input
+        matSliderThumb
+        [ngModel]="item.progress"
+        (valueChange)="updateProgressBar($event)"
+      />
     </mat-slider>
   </div>
   <p class="text-center fs-4">
-    {{ item.title }}
+    {{ item.description }}
   </p>
 </div>
