--- a/src/app/homepage/todo-list/todo-list.component.html
+++ b/src/app/homepage/todo-list/todo-list.component.html
@@ -5,6 +5,9 @@
 </div>
 <ul class="list-group">
   <li *ngFor="let item of project.todoList; index as i" class="list-group-item">
-    <app-todo-item [item]="item"></app-todo-item>
+    <app-todo-item
+      [item]="item"
+      (updateItem)="updateItem($event)"
+    ></app-todo-item>
   </li>
 </ul>
